--- a/diycode-app/src/main/res/menu/activity_main_drawer.xml
+++ b/diycode-app/src/main/res/menu/activity_main_drawer.xml
@@ -23,23 +23,35 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_camera" android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item android:id="@+id/nav_gallery" android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item android:id="@+id/nav_slideshow" android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item android:id="@+id/nav_manage" android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
-    </group>
+    <item android:title="用户设置">
+        <item
+            android:id="@+id/nav_post"
+            android:icon="@drawable/nav_menu_post"
+            android:title="我的帖子"/>
+        <item
+            android:id="@+id/nav_gallery"
+            android:icon="@drawable/nav_menu_collect"
+            android:title="我的收藏"/>
+        <item
+            android:id="@+id/nav_slideshow"
+            android:icon="@drawable/nav_menu_comment"
+            android:title="我的评论"/>
+        <item
+            android:id="@+id/nav_manage"
+            android:icon="@drawable/nav_menu_share"
+            android:title="我的分享"/>
+    </item>
 
-    <item android:title="Communicate">
+    <item android:title="软件设置">
         <menu>
-            <item android:id="@+id/nav_share" android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item android:id="@+id/nav_send" android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+            <item
+                android:id="@+id/nav_share"
+                android:icon="@drawable/nav_menu_about"
+                android:title="关于我们"/>
+            <item
+                android:id="@+id/nav_send"
+                android:icon="@drawable/nav_menu_setting"
+                android:title="软件设置"/>
         </menu>
     </item>
 
