--- a/diycode-app/src/main/res/layout/nav_header_main.xml
+++ b/diycode-app/src/main/res/layout/nav_header_main.xml
@@ -38,8 +38,9 @@
 
     <ImageView
         android:id="@+id/nav_header_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:scaleType="fitStart"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:src="@mipmap/ic_launcher"
         />
