--- a/diycode-app/src/main/res/layout/activity_setting.xml
+++ b/diycode-app/src/main/res/layout/activity_setting.xml
@@ -21,7 +21,7 @@
   ~ Weibo:   http://weibo.com/GcsSloop
   -->
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_setting"
@@ -31,6 +31,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.gcssloop.diycode.activity.SettingActivity">
 
-</RelativeLayout>
+
+</LinearLayout>
