--- a/diycode-app/src/main/res/layout/activity_topic_content.xml
+++ b/diycode-app/src/main/res/layout/activity_topic_content.xml
@@ -30,9 +30,17 @@
     android:layout_height="match_parent"
     tools:context="com.gcssloop.diycode.activity.TopicContentActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_scrollFlags="scroll|enterAlways"/>
+
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -170,12 +178,12 @@
             </android.support.v7.widget.RecyclerView>
 
             <RelativeLayout
-                android:visibility="gone"
                 android:id="@+id/need_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:padding="12dp">
+                android:padding="12dp"
+                android:visibility="gone">
 
                 <Button
                     android:id="@+id/login"
@@ -194,22 +202,23 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:visibility="gone"
                 android:id="@+id/can_reply"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="12dp">
+                android:padding="12dp"
+                android:visibility="visible">
 
                 <EditText
-                    android:hint="评论内容"
                     android:id="@+id/my_reply"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/topic_reply_bg"
                     android:gravity="start"
-                    android:minHeight="80dp"
-                    android:minLines="2"
-                    android:padding="4dp"/>
+                    android:hint="评论内容"
+                    android:minHeight="60dp"
+                    android:padding="6dp"
+                    android:textCursorDrawable="@null"
+                    android:textSize="16sp"/>
 
                 <Button
                     android:id="@+id/send_reply"
