--- a/diycode-app/src/main/res/layout/activity_login.xml
+++ b/diycode-app/src/main/res/layout/activity_login.xml
@@ -124,5 +124,14 @@
             android:text="登  录"
             android:textColor="@color/diy_white"
             android:textSize="18sp"/>
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:padding="12dp"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/sign_up"
+            android:text="没有账号？点击注册"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </LinearLayout>
