添加通知页面

--- a/diycode-app/src/main/res/layout/app_bar_main.xml
+++ b/diycode-app/src/main/res/layout/app_bar_main.xml
@@ -55,6 +55,7 @@
     <include layout="@layout/content_main"/>
 
     <android.support.design.widget.FloatingActionButton
+        android:visibility="gone"
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
