修正默认键盘

--- a/diycode-app/src/main/res/layout/activity_login.xml
+++ b/diycode-app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
                 android:layout_marginLeft="6dp"
                 android:background="@null"
                 android:hint="Email / 用户名"
-                android:inputType="text"
+                android:inputType="textEmailAddress|text"
                 android:textSize="16sp"/>
 
             <View
