--- a/diycode-app/src/main/res/layout/activity_recycler_refresh.xml
+++ b/diycode-app/src/main/res/layout/activity_recycler_refresh.xml
@@ -29,6 +29,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
