--- a/diycode-app/src/main/res/layout/activity_image.xml
+++ b/diycode-app/src/main/res/layout/activity_image.xml
@@ -21,17 +21,23 @@
   ~ Weibo:   http://weibo.com/GcsSloop
   -->
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_image"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.gcssloop.diycode.activity.ImageActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
-</RelativeLayout>
+</LinearLayout>
